<resources>
    <string name="app_name">Inventory</string>

    <string name="cancel">Cancel</string>

    <string name="email_hint">Email...</string>
    <string name="password_hint">Password...</string>

    <string name="login_login">LOGIN</string>

    <string name="signup_text">Sign up!</string>
    <string name="sign_out">Sign out</string>
    <string name="signup_password_again_hint">Password again...</string>


    <string name="empty_email_pass">All fields require inputs!</string>
    <string name="login_unsuccsessful">Login unsuccsessful! Please try again!</string>
    <string name="signup_password_missmatch">Password do not match!</string>
    <string name="check_all_fields">Please check all fields!</string>
    <string name="something_went_wrong">Something went wrong!</string>

    <string name="create_household_text">Create a household:</string>
    <string name="skip">Skip!</string>
    <string name="create">Create!</string>
    <string name="create_household_explain_text">(You can only have one household that you are responsible for. However, you do not need to create one if you already have a family member already created one you are apart of)</string>
    <string name="household_name_hint">Household name...</string>
    <string name="household_address_hint">Household address...</string>
    <string name="household_name_cant_be_empty">Household name can\'t be empty!</string>

    <string name="menuRooms">Rooms</string>
    <string name="menuHome">Home</string>
    <string name="menuSettings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="change_me">Change me...</string>

    <string name="edit_item">Edit item:</string>
    <string name="name">Name: </string>
    <string name="critical_threshold">Threshold: </string>
    <string name="critical_threshold_explained">(The amount in your inventory when you should be noticed that you need to buy it)</string>
    <string name="delete">Delete: </string>
    <string name="delete_explain">(Type delete and then press delete button to delete item)</string>
    <string name="delete_button_text">Delete</string>
    <string name="delete_text">delete</string>
    <string name="need_text_delete">You need to put "delete" (without the quotes) into the delete field</string>
    <string name="add_item">Add item:</string>
    <string name="item_added">Item added!</string>
    <string name="item_deleted">Item deleted!</string>
    <string name="add_room">Add room:</string>
    <string name="description">Description:</string>
    <string name="room_added">Room added!</string>


</resources>
