<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.inventory.ui.rooms.RoomsFragment"
        android:label="@string/menuRooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.inventory.ui.home.HomeFragment"
        android:label="@string/menuHome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.inventory.ui.settings.SettingsFragment"
        android:label="@string/menuSettings"
        tools:layout="@layout/fragment_settings" />
</navigation>