<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/householdCreateHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/create_household_text"
        />
    <TextView
        android:id="@+id/householdCreateExplainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_below="@id/householdCreateHeadline"
        android:text="@string/create_household_explain_text"
        />

    <ImageView
        android:id="@+id/householdCreateHomePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/householdCreateExplainText"
        android:layout_marginTop="20dp"
        android:src="@drawable/outline_home_black_48dp"/>
    <EditText
        android:id="@+id/householdCreateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/householdCreateExplainText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/household_name_hint"
        />

    <ImageView
        android:id="@+id/householdCreateAddressPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/householdCreateHomePic"
        android:layout_marginTop="20dp"
        android:src="@drawable/outline_gps_fixed_black_48dp"/>

    <EditText
        android:id="@+id/householdCreateAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/householdCreateName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/household_address_hint"
        />
    <Button
        android:id="@+id/householdCreateCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/householdCreateAddress"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="250dp"
        android:text="@string/skip"
        android:onClick="HouseholdCreateSkip"
        />

    <Button
        android:id="@+id/signupSignupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/householdCreateAddress"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="50dp"
        android:text="@string/create"
        android:onClick="CreateHouseholdSubmit"
        />



</RelativeLayout>