<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:whatever="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/signupLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/circle"/>

    <TextView
        android:id="@+id/signUpHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/signup_text"
        android:textSize="70sp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpHeadline"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/signupPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/signup_password_again_hint"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/signupCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupPasswordAgain"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="250dp"

        android:text="@string/cancel"
        android:onClick="SignUpCancel"
        />
    <Button
        android:id="@+id/signupSignupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupPasswordAgain"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="50dp"
        android:text="@string/signup_text"
        android:onClick="SignUpSubmit"
        />




</RelativeLayout>