<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItemActivity">

    <TextView
        android:id="@+id/editItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/edit_item"
        />
    <TextView
        android:id="@+id/editItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editItemTitle"
        android:text="@string/name"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/editItemNameEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editItemTitle"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/editItemCritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editItemName"
        android:text="@string/critical_threshold"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/editItemCriticalEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editItemNameEdit"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/editItemCriticalExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/editItemCritical"
        android:text="@string/critical_threshold_explained"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/editItemDeleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editItemCriticalExplain"
        android:text="@string/delete"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/editItemDeleteExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/editItemDeleteText"
        android:text="@string/critical_threshold_explained"
        android:textSize="15sp"
        />
    <EditText
        android:id="@+id/editItemDeleteEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editItemCriticalExplain"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:id="@+id/editItemDeletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editItemDeleteExplain"
        android:text="@string/delete_button_text"
        android:layout_centerHorizontal="true"
        android:onClick="DeleteItem"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editItemUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_update_black_48dp"
        app:backgroundTint="@color/colorWhite"
        android:onClick="UpdateItem"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editItemBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_arrow_back_black_48dp"
        app:backgroundTint="@color/colorWhite"
        android:onClick="GoBack"
        />

</RelativeLayout>