<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/addItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/add_item"
        />
    <TextView
        android:id="@+id/addItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/addItemTitle"
        android:text="@string/name"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/addItemNameEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addItemTitle"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/addItemCritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/addItemName"
        android:text="@string/critical_threshold"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/addItemCriticalEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addItemNameEdit"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/addItemCriticalExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/addItemCritical"
        android:text="@string/critical_threshold_explained"
        android:textSize="15sp"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_add_circle_black_48dp"
        app:backgroundTint="@color/colorWhite"
        android:onClick="AddNewItem"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_arrow_back_black_48dp"
        app:backgroundTint="@color/colorWhite"
        android:onClick="GoBack"
        />

</RelativeLayout>